# regionhop

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.example.toml
regionhop/: __init__.py  __main__.py  cli.py  config.py  geocheck.py  player.py  tunnel.py
regionhop/providers/: __init__.py  azure.py  base.py  manual.py
tests/: test_cli.py  test_config.py  test_geocheck.py  test_providers.py  test_tunnel.py
