[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regionhop"
version = "0.1.0"
description = "Watch region-locked video (incl. livestreams) by routing through your own regional cloud VMs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "The regionhop Authors" }]
keywords = ["proxy", "geo", "socks5", "ssh-tunnel", "yt-dlp", "video", "livestream", "vpn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/OWNER/regionhop"
Issues = "https://github.com/OWNER/regionhop/issues"

[project.scripts]
regionhop = "regionhop.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["regionhop"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
